fixed overflowing of markdown content on small screens

--- a/projects/showcase/src/styles.css
+++ b/projects/showcase/src/styles.css
@@ -33,6 +33,10 @@
     @apply inline-grid;
   }
 
+  markdown, markdown > * {
+    @apply min-w-0;
+  }
+
   markdown > p,
   markdown > ul,
   markdown > pre[class*="language-"] {
